# RAG

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/router/: endpoint.py
app/service/: service.py
app/test/: generate_swagger.py  swagger.json
