[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-bailian20231229>=2.13.1",
    "alibabacloud-tea-openapi>=0.4.4",
    "alibabacloud-tea-util>=0.3.14",
    "fastapi>=0.138.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
